# DistSync

./: .gitignore  .gitignore~  README.md  resetExpirement  revertExpirement.sh  runDistsync.sh  runOnFSMulti  runOnFSSingle  runOnFreshAndStale  runOnRSSingle  scanAndGenJobsFS.sh
datCurr/: TESTFILE5.txt
datOld/: 9  TESTFILE2.txt
datOld/dir1/: TESTFILE3.txt
exampleCurr/d4/d1/: 2
exampleJobs/: M.txt
expirement/stale/: 1
fakeScans/: runScan.sh  scanMaker.sh
jobGenerator/: Constants.h  JobOutputStream.cpp  JobOutputStream.h  Makefile.in  Record.cpp  SplitJobOutputStream.cpp  SplitJobOutputStream.h  aclocal.m4  compare  compare.cpp  configure  configure.ac  main.cc
jobGenerator/Debug/: Makefile  config.h  config.status  libtool
jobGenerator/Debug/po/: Makefile  Makefile.in  POTFILES
jobGenerator/Debug/src/: Makefile  jobgenerator
jobGenerator/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
jobGenerator/src/: Constants.h~  JobOutputStream.cpp~  JobOutputStream.h~  Makefile.am  Makefile.in  Record.cpp  Record.cpp~  Record.h  Record.h~  SplitJobOutputStream.cpp~  SplitJobOutputStream.h~  main.cc~
jobSplitter/: compare  compare.cpp  compare.cpp~  jobGen
scanInflater/: inflateScan  inflateScan.cpp
src/: Constants.java  CustomLog.java  GanttChartGenerator.java  Job.java  JobAgreementProtocol.java  JobSender.java  JobSplitter.java  JobTiming.java  Manager.java  NetConstants.java  SystemRunner.java  Worker.java  main.java
tmp/jobs/: A.new.txt  A.txt  C.new.txt  D.new.txt  D.txt  M.new.txt  R.new.txt
(+5 files in other folders)
